--- a/src/main/resources/env-common.properties
+++ b/src/main/resources/env-common.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url.server=jdbc:mysql://localhost:3306/upmcrm?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=MbN+daqtH9A=
 
 # 1:mysql 2:oracle 3:sqlserver
 dbtype=1
